# Competency-maps-for-NarrativeArc

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  release-drafter.yml
competency_maps/: __init__.py  __main__.py  cli.py  cli_utils.py  competency_maps.py
competency_maps/data_loaders/: __init__.py  csv_data_loader.py  data_loader.py  files_data_loader.py
competency_maps/document_embedders/: __init__.py  doc2vec_document_embedder.py  document_embedder.py
competency_maps/exceptions/: exceptions.py
competency_maps/preprocessors/: __init__.py  contractions.py  nltk_preprocessor.py  preprocessor.py  spacy_preprocessor.py
competency_maps/topic_models/: __init__.py  hierarchical_topic_model.py  lda_topic_model.py  ldamallet_topic_model.py  top2vec_topic_model.py  topic_model.py
competency_maps/utils/: __init__.py  custom_logger.py  dataframe_utility.py  map_config.py
competency_maps/word_embedders/: __init__.py  fasttext_word_embedder.py  glove_word_embedder.py  word2vec_word_embedder.py  word_embedder.py
docker/: Dockerfile  README.md
docs/: conf.py  index.rst  make.bat  requirements.txt
docs/_templates/: badges.html  github.html  moreinfo.html
docs/pages/: approach.rst  approach2.rst  authors.rst  competency_maps.data_loaders.rst  competency_maps.document_embedders.rst  competency_maps.exceptions.rst  competency_maps.preprocessors.rst  competency_maps.rst  competency_maps.topic_models.rst  competency_maps.utils.rst  competency_maps.word_embedders.rst  modules.rst  usage.rst
tests/test_files/input/understanding_ml/: chapter_1-introduction.txt  chapter_10-boosting.txt  chapter_11-model-selection-validation.txt  chapter_12-convex-learning-problems.txt  chapter_13-regularization-stability.txt  chapter_14-stochastic-gradient-descent.txt  chapter_15-support-vector-machines.txt  chapter_16-kernel-methods.txt  chapter_17-multiclass-ranking-complex-prediction-problems.txt  chapter_18-decision-trees.txt  chapter_19-nearest-neighbor.txt  chapter_2-a-gentle-start.txt  chapter_20-neural-networks.txt  chapter_21-online-learning.txt  chapter_22-clustering.txt  chapter_23-dimensionality-reduction.txt  chapter_3-a-formal-learning-model.txt  chapter_4-learning-via-uniform-convergence.txt  chapter_5-bias-complexity-tradeoff.txt  chapter_6-vc-dimension.txt  chapter_7-nonuniform-learnability.txt  chapter_8-runtime-learning.txt  chapter_9-linear-predictors.txt
